--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        repos: [osu-lazer, mpv-mpris, breeze10-kde-git, weechat-notify-send, nheko-git, fpp-git, anbox-image-gapps]
+        repos: [osu-lazer, mpv-mpris, breeze10-kde-git, weechat-notify-send, nheko-git, fpp-git, anbox-image-gapps, redsocks]
 
       fail-fast: false
       
