--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     - cron:  '1 */6 * * *'
 
 jobs:
-  build:
+  buildAUR:
     strategy:
       matrix:
         repos: [osu-lazer, mpv-mpris, breeze10-kde-git, weechat-notify-send, nheko-git, fpp-git, anbox-image-gapps, redsocks]
@@ -32,3 +32,31 @@ jobs:
         tag: "packages"
         artifacts: "./*/*.zst"
         token: ${{ secrets.GITHUB_TOKEN }}
+
+  buildNonAUR:
+    strategy:
+      matrix:
+        PKGBUILDs: [rdm/PKGBUILD]
+
+      fail-fast: false
+      
+    runs-on: ubuntu-latest
+    container:
+      image: archlinux
+      options: --privileged
+      volumes:
+        - /sys/fs/cgroup:/sys/fs/cgroup
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build Non-AUR packages
+        uses: vifly/arch-build@master
+        with:
+          PKGBUILD: $GITHUB_WORKSPACE/${{ matrix.PKGBUILDs }}
+          OUTDIR: ./arch-packages
+      
+      - uses: ncipollo/release-action@v1.7.3
+        with:
+          allowUpdates: true
+          tag: "packages"
+          artifacts: "./arch-packages/*.zst"
+          token: ${{ secrets.GITHUB_TOKEN }}
