--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
         uses: edlanglois/pkgbuild-action@v1
         with:
           pkgdir: ${{ matrix.PKGBUILDs }}
+          aurDeps: true
       
       - uses: ncipollo/release-action@v1
         with:
