add workaround for Arch Docker issue

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
       fail-fast: false
       
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
     - uses: DuckSoft/build-aur-action@master
@@ -41,7 +41,7 @@ jobs:
 
       fail-fast: false
       
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
