--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: zjuyk/pkgbuild-aur@master
+    - uses: DuckSoft/build-aur-action@master
       with:
-        pkg-name: ${{ matrix.repos }}
+        repo-name: ${{ matrix.repos }}
     
     - uses: actions/upload-artifact@v2
       with:
