--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: DuckSoft/build-aur-action@master
+    - uses: actions/checkout@v2
+    
+    - uses: ./build-aur-action@master
       with:
         repo-name: ${{ matrix.repos }}
     
