--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - uses: ./build-aur-action@master
+    - uses: ./build-aur-action
       with:
         repo-name: ${{ matrix.repos }}
     
