--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - uses: actions/download-artifact@v2
+        id: download
       
       - uses: ./create-db-and-upload-action
         with:
@@ -86,3 +87,4 @@ jobs:
           dest_path: /archrepo
           repo_name: vifly
           gpg-privatekey: ${{ secrets.gpg_private_key }}
+          local_path: ${{ steps.download.outputs.download-path }}
