--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build Non-AUR packages
         id: makepkg
-        uses: edlanglois/pkgbuild-action@v1
+        uses: ./build-nonaur-action
         with:
           pkgdir: ${{ matrix.PKGBUILDs }}
           aurDeps: true
