--- a/python-octodns/python-pycountry-convert/PKGBUILD
+++ b/python-octodns/python-pycountry-convert/PKGBUILD
@@ -8,7 +8,7 @@ arch=('any')
 url="http://pypi.python.org/pypi/pycountry-convert"
 license=('LGPL3.0')
 depends=('python-pycountry' 'python-pprintpp')
-makedepends=('python-setuptools')
+makedepends=('python-setuptools' 'python-pip')
 source=("https://pypi.io/packages/source/p/${pkgname#python-}/${pkgname#python-}-${pkgver}.tar.gz")
 sha512sums=('5010668fcc20e70e035464d69caa0cc3235bc3d913cb0ec759267395ca25d6ffe36800f5c0efc380e0d52c5e7eee35d31471b847072f5253b884a49dfd35a4d7')
 
