fix build error

--- a/python-pyclipper/PKGBUILD
+++ b/python-pyclipper/PKGBUILD
@@ -10,7 +10,7 @@ url="https://github.com/fonttools/$_pyname"
 arch=(x86_64 i686)
 license=(MIT)
 depends=(python)
-makedepends=('cython' 'python-setuptools')
+makedepends=('cython' 'python-setuptools-scm')
 _archive="$_pyname-$pkgver"
 source=("https://files.pythonhosted.org/packages/source/${_pyname::1}/$_pyname/$_archive.tar.gz")
 sha256sums=('639fbc55569b94487f89261b1656e3e655d06888a582218c5432c426705d1f6f')
