--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
             preinstall-pkgs: "at-spi2-core"
           - repos: realesrgan-ncnn-vulkan
             preinstall-pkgs: "vulkan-intel"
+          - repos: python-octodns
+            preinstall-pkgs: "python-pip"
 
       fail-fast: false
       
