switch to offical image

--- a/build-nonaur-action/Dockerfile
+++ b/build-nonaur-action/Dockerfile
@@ -1,4 +1,7 @@
-FROM martynas/archlinux:latest
+FROM archlinux:latest
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN date
 
 COPY entrypoint.sh /entrypoint.sh
 
