--- a/build-aur-action/Dockerfile
+++ b/build-aur-action/Dockerfile
@@ -3,6 +3,6 @@ FROM archlinux:latest
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN date
 RUN pacman -Syu --noconfirm
-RUN pacman -S base-devel git --noconfirm
+RUN pacman -S base-devel git python --noconfirm
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"] 
