--- a/build-nonaur-action/Dockerfile
+++ b/build-nonaur-action/Dockerfile
@@ -2,6 +2,8 @@ FROM archlinux:latest
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN date
+RUN pacman -Syu --noconfirm
+RUN pacman -S base-devel git python --noconfirm
 
 COPY entrypoint.sh /entrypoint.sh
 
