Update build.yml (#1)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Delete veracrypt/PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Add files via upload

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update .SRCINFO

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Delete veracrypt/test

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update select_lang.sh

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update .SRCINFO

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Add files via upload

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update .SRCINFO

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update .SRCINFO

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+Hileb

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [powershell]
+        repos: [rustic, powershell-bin]
 
       fail-fast: false
       
