--- a/veracrypt/PKGBUILD
+++ b/veracrypt/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Shapiro <shapiro at quantentunnel dot de>
 
-pkgname='veracrypt-inyourlanguage'
+pkgname='veracrypt'
 _pkgname='VeraCrypt'
 pkgver=1.26.7
 pkgrel=8
@@ -11,12 +11,12 @@ license=('custom')
 provides=('veracrypt')
 conflicts=('veracrypt' 'veracrypt-console-bin' 'veracrypt-git' 'veracrypt-trans')
 depends=('fuse2>=2.8.0' 'wxwidgets-gtk3' 'libsm' 'device-mapper')
-makedepends=('git' 'yasm' 'libxml2' 'coreutils')
+makedepends=('git' 'yasm' 'libxml2' 'coreutils' 'pcsclite')
 optdepends=('sudo: mounting encrypted volumes as nonroot users' 'pcsclite: providing support for smartcards')
 source=(https://veracrypt.fr/code/${_pkgname}/snapshot/${_pkgname}_${pkgver}.tar.gz
         select_lang.sh)
 sha512sums=('c803c6301a8a7b6d8efc74284070c01629a760dceaa518f2287d62709bd25450fec75f2fa0e2ab0eb57993faec9cba4d51104273a56a88fa288a1e14bcf868bd'
-            '91f39bd51f397a02483b2cc2df19ea2e16539551311aaffd9a892da1153558aa85c5b09c276a0a8d86b511873d3b11a861ff93bb4d3d75e40a3c4860e34f13e1')
+            '389fa866b54585a554c30b34f59ef5e45d62fdfbd83f2c094aeb2dd2ba9bc36eb3b39e8ff17604c26d4dadd668ce0484aecfa46c2b44b68c90a7420c4a7e1665')
 
 prepare() {
   bash $srcdir/../select_lang.sh
@@ -35,4 +35,3 @@ package() {
   rm -r "${pkgdir}/usr/share/veracrypt"
   rm -r "${pkgdir}/usr/share/doc"
 }
-
