--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   buildAUR:
     strategy:
       matrix:
-        repos: [adduser-deb, carapace-bin, rustic, powershell-bin]
+        repos: [adduser-deb, alist, carapace, davmail, doggo, fselect, rustic, powershell-bin]
 
       fail-fast: false
       
