Update build.yml (#5)
* Update build.yml

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

* Update PKGBUILD

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

---------

Signed-off-by: Community <61367732+HilebertSpace@users.noreply.github.com>

--- a/ion-git/PKGBUILD
+++ b/ion-git/PKGBUILD
@@ -27,6 +27,7 @@ build() {
 
 package() {
   cd $_pkgname
-  DESTDIR=/usr/local/bin bash/install.sh
+  mkdir -p "$pkgdir"/usr/{bin,share/doc/ion}
+  DESTDIR="$pkgdir"/usr/bin bash/install.sh
   cp -r manual/ $pkgdir/usr/share/doc/ion/
 }
