--- a/veracrypt-inyourlanguage/PKGBUILD
+++ b/veracrypt-inyourlanguage/PKGBUILD
@@ -10,7 +10,7 @@ arch=('x86_64' 'i686' 'arm64' 'armhf' 'aarch64')
 license=('custom')
 provides=('veracrypt')
 conflicts=('veracrypt' 'veracrypt-console-bin' 'veracrypt-git' 'veracrypt-trans')
-depends=('fuse2>=2.8.0' 'wxwidgets-gtk3' 'libsm' 'device-mapper')
+depends=('fuse2>=2.8.0' 'wxwidgets-gtk3' 'wxwidgets-common' 'libsm' 'device-mapper' 'bash' 'gcc-libs' 'glibc')
 makedepends=('git' 'yasm' 'libxml2' 'coreutils' 'pcsclite')
 optdepends=('sudo: mounting encrypted volumes as nonroot users' 'pcsclite: providing support for smartcards')
 source=(https://veracrypt.fr/code/${_pkgname}/snapshot/${_pkgname}_${pkgver}.tar.gz
@@ -24,13 +24,17 @@ prepare() {
 
 build() {
   cd ${_pkgname}_${pkgver}/src
-  make NOTEST=1 PKG_CONFIG_PATH=/usr/lib/pkgconfig WX_CONFIG=/usr/bin/wx-config
+  make NOTEST=1 \
+       PKG_CONFIG_PATH=/usr/lib/pkgconfig \
+       TC_EXTRA_LFLAGS+="-ldl ${LDFLAGS}" \
+       TC_EXTRA_CXXFLAGS="${CXXFLAGS} ${CPPFLAGS}" \
+       TC_EXTRA_CFLAGS="${CFLAGS} ${CPPFLAGS}"
 }
 
 package() {
   cd ${_pkgname}_${pkgver}/src
   make DESTDIR="${pkgdir}/" install
-  install -Dm 644 License.txt -t "${pkgdir}/usr/share/licenses/${_pkgname}"
+  install -Dm 644 License.txt -t "${pkgdir}/usr/share/licenses/veracrypt"
   rm -r "${pkgdir}/usr/sbin"
   rm -r "${pkgdir}/usr/share/veracrypt"
   rm -r "${pkgdir}/usr/share/doc"
